--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -24,6 +24,7 @@
 
 .footer__nav-link {
   text-decoration: none;
+  font-size: var(--size-base);
   color: var(--color-text);
   letter-spacing: 0.0625em;
   transition: color 0.3s;
@@ -54,7 +55,7 @@
 .footer__note {
   grid-area: footer;
   text-align: center;
-  font-size: var(--size-sm);
+  font-size: var(--size-xs);
   color: var(--color-text);
   margin-bottom: 0.5em;
 }
@@ -109,7 +110,7 @@
   }
 
   .footer__note {
-    font-size: var(--size-base);
+    font-size: var(--size-sm);
   }
 }
 
@@ -120,7 +121,7 @@
   }
 
   .footer__note {
-    font-size: var(--size-lg);
+    font-size: var(--size-base);
   }
 }
 
